# ros2_nav_model

./: README.md
kick_ass/: package.xml  setup.cfg  setup.py
kick_ass/doc/: Doxyfile
kick_ass/doc/html/: ____init_____8py.html  annotated.html  classes.html  classkick__ass_1_1robot__controller_1_1_controller-members.html  classkick__ass_1_1robot__controller_1_1_controller.html  classkick__ass_1_1robot__controller_1_1_controller__coll__graph.map  classkick__ass_1_1robot__controller_1_1_controller__inherit__graph.md5  classkick__ass_1_1robot__estimator_1_1_estimator-members.html  classkick__ass_1_1robot__estimator_1_1_estimator.html  classkick__ass_1_1robot__estimator_1_1_estimator__coll__graph.md5  classkick__ass_1_1robot__estimator_1_1_estimator__inherit__graph.map  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  menudata.js  namespacekick__ass.html  namespacekick__ass_1_1robot__controller.html  namespacekick__ass_1_1robot__estimator.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  robot__controller_8py.html  robot__estimator_8py.html
kick_ass/doc/html/search/: all_0.js  all_1.js  all_2.js  (+35 more)
kick_ass/kick_ass/: robot_controller.py  robot_estimator.py
kick_ass/launch/: launch_urdf_into_gazebo.launch.py  robot_move.launch.py
kick_ass/meshes/: back_left_l.STL  back_right_l.STL  base_link.STL  front_left_l.STL  front_right_l.STL
kick_ass/rviz/: check_this.rviz  laser.rviz
kick_ass/urdf/: kick_ass.csv  kick_ass.urdf
